2010-11-09  Helder Correia  <helder@sencha.com>

Reviewed by Darin Adler.

        Philip Canvas test 2d.path.rect.winding fails
        https://bugs.webkit.org/show_bug.cgi?id=49225

        Remove test from skipped list.

        * platform/gtk/Skipped:
        * platform/mac-leopard/Skipped:
        * platform/qt/Skipped:
2010-11-09  Helder Correia  <helder@sencha.com>

        Reviewed by Darin Adler.

        Philip Canvas test 2d.path.rect.winding fails
        https://bugs.webkit.org/show_bug.cgi?id=49225

        Rect path direction is important for nonzero winding rule.

        The rect(x, y, w, h) method must create a new subpath containing just the four points
        (x, y), (x+w, y), (x+w, y+h), (x, y+h), with those four points connected by straight
        lines, and must then mark the subpath as closed.

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::rect):

Canonical link: https://commits.webkit.org/62196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71716 268f45cc-cd09-0410-ab3c-d52691b4dbfc