WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -793,16 +793,6 @@ void CanvasRenderingContext2D::rect(float x, float y, float width, float height)
         return;
     }
 
-    if (width < 0) {
-        width = -width;
-        x -= width;
-    }
-
-    if (height < 0) {
-        height = -height;
-        y -= height;
-    }
-
     m_path.addRect(FloatRect(x, y, width, height));
 }
 
